# rdc-proxy-unifi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
install/: install-unifi.sh
rdc_proxy_unifi/: __init__.py  poll.py
tests/: conftest.py  test_parse.py
